--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
     <script src="ray.js"></script>
     <script src="boundary.js"></script>
-    <script src="particle.js"></script>
+    <script src="particles.js"></script>
     <script src="sketch.js"></script>
 </body>
 </html>
